--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-rte": "^0.11.0",
     "react-spinkit": "^2.1.1",
     "react-toastify": "^3.4.2",
+    "react-web-notification": "^0.3.1",
     "redux": "^3.6.0",
     "redux-form": "^6.6.1",
     "redux-persist": "^4.5.0",
