add function request order

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cms-restaurant",
+  "name": "waiter",
   "version": "0.0.1",
   "description": "",
   "author": "Jack <lynhan15041997@gmail.com>",
